# typesync

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
example/backend/: app.py
example/frontend/: package.json  vite.config.ts
example/frontend/src/: App.tsx  api.ts
example/frontend/src/flask_urls/: apis.ts  types.ts
rollup-plugin-ts-flask-urls/: package-lock.json  package.json  tsconfig.json
rollup-plugin-ts-flask-urls/src/: index.ts
tests/: conftest.py  test_inference.py  test_marshmallow.py  test_pydantic.py  test_stubs.py
ts_flask_urls/: __init__.py  cli.py  codegen.py  stubs.py
ts_flask_urls/codegen/: extractor.py  inference.py  writer.py
ts_flask_urls/type_translators/: __init__.py  abstract.py  base_translator.py  flask_translator.py  type_node.py
typesync/: argument_types.py  cli.py  ts_types.py  utils.py
typesync/codegen/: extractor.py  inference.py
typesync/type_translators/: __init__.py  abstract.py  base_translator.py  flask_translator.py  marshmallow_translator.py  pydantic_translator.py  type_node.py
typesync/utils/: __init__.py  base_utils.py  marshmallow_utils.py  pydantic_utils.py
