[project]
version = "0.0.1a1"
name = "typesync"
description = "Auto-generate TypeScript client code from Flask routes and Python type annotations."
readme = "README.md"
license-files = ["LICENSE"]
dependencies = [
  "click",
  "flask",
  "inflection>=0.5.1",
  "prettytable>=3.17.0",
]
requires-python = ">= 3.12"
authors = [
  {name = "Francisco Rodrigues", email = "francisco.rodrigues0908@gmail.com"},
]

[project.urls]
Homepage = "https://github.com/ArmindoFlores/typesync"
GitHub = "https://github.com/ArmindoFlores/typesync"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["typesync*"]

[dependency-groups]
dev = [
    "ty>=0.0.11",
    "Flask-CORS",
    "pytest>=9.0.2",
    "types-flask-cors>=6.0.0.20250809",
    "pre-commit>=4.5.1",
    "ruff>=0.14.13",
]

[tool.ty.rules]
invalid-type-form = "ignore"

[tool.ty.src]
exclude = ["tests"]

[tool.ruff.lint]
extend-select = [
  "E",      # pycodestyle (errors)
  "W",      # pycodestyle (warnings)
  "F",      # pyflakes
  "N",      # pep8-naming
  "Q",      # flake8-quotes
  "RUF",    # ruff
  "UP",     # pyupgrade
  "S",      # flake8-bandit
  "C4",     # flake8-comprehensions
  "INT",    # flake8-gettext
  "LOG",    # flake8-logging
  "G",      # flake8-logging-format
  "B",      # flake8-bugbear
  "A001",   # flake8-builtins
  "COM",    # flake8-commas
  "T10",    # flake8-debugger
  "EXE",    # flake8-executable
  "ISC",    # flake8-implicit-str-concat
  "PIE",    # flake8-pie
  "PT",     # flake8-pytest-style
  "RSE",    # flake8-raise
  "RET504", # flake8-return
  "SIM",    # flake8-simplify
  "TID",    # flake8-tidy-imports
  "PGH",    # pygrep-hooks
  "PL",     # pylint
  "TRY",    # tryceratops
  "PERF",   # perflint
  "FURB",   # refurb
]
extend-ignore = [
  "PLR0911",
  "PLR0913",
  "PLR2004",
  "COM812",
  "RET504",
  "G004",
  "TRY400",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]
